[tool.poetry]
name = "cop26radar"
version = "0.1.0"
description = "COP26 monitoring & radar"
authors = ["Theo Alves Da Costa <theo.alvesdacosta@ekimetrics.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.3"
plotly = "^5.3.1"
streamlit = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
