[tool.poetry]
name = "COP26 Radar"
version = "0.0.1"
description = "A detailed analysis of COP26 reactions on Twitter"
authors = ["Theo Alves Da Costa <theo.alves.da.costa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pywin32 = { version = "225", markers = "sys_platform == 'win32'" }
jupyter = "^1.0.0"
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.10"
mknotebooks = "^0.7.0"
mkdocstrings = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 200